--- a/index.html
+++ b/index.html
@@ -1,1 +1,72 @@
+<!DOCTYPE html>
+<html lang="fa" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>علی احمدی - نمونه کار</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>علی احمدی</h1>
+        <p>توسعه‌دهنده وب و طراح گرافیک</p>
+    </header>
 
+    <nav>
+        <a href="#about">درباره من</a>
+        <a href="#portfolio">نمونه کارها</a>
+        <a href="#contact">تماس با من</a>
+    </nav>
+
+    <main>
+        <section id="about">
+            <h2>درباره من</h2>
+            <img src="https://via.placeholder.com/150" alt="عکس پروفایل علی احمدی" class="profile-pic">
+            <p>
+                سلام! من علی احمدی هستم. من به دنیای تکنولوژی و طراحی علاقه زیادی دارم و چند سالی هست که در زمینه توسعه وب فعالیت می‌کنم. هدف من ایجاد تجربه‌های کاربری زیبا و کارآمد برای کاربران است. برای اطلاعات بیشتر می‌توانید رزومه من را دانلود کنید.
+            </p>
+            <a href="#" class="button">دانلود رزومه</a>
+        </section>
+
+        <hr>
+
+        <section id="portfolio">
+            <h2>نمونه کارها</h2>
+            <div class="portfolio-grid">
+                <div class="portfolio-item">
+                    <img src="https://via.placeholder.com/300x200" alt="نمونه کار اول">
+                    <h3>پروژه اول</h3>
+                    <p>توضیح کوتاهی درباره این پروژه و تکنولوژی‌های استفاده شده.</p>
+                </div>
+                <div class="portfolio-item">
+                    <img src="https://via.placeholder.com/300x200" alt="نمونه کار دوم">
+                    <h3>پروژه دوم</h3>
+                    <p>توضیح کوتاهی درباره این پروژه و تکنولوژی‌های استفاده شده.</p>
+                </div>
+                <div class="portfolio-item">
+                    <img src="https://via.placeholder.com/300x200" alt="نمونه کار سوم">
+                    <h3>پروژه سوم</h3>
+                    <p>توضیح کوتاهی درباره این پروژه و تکنولوژی‌های استفاده شده.</p>
+                </div>
+            </div>
+        </section>
+
+        <hr>
+
+        <section id="contact">
+            <h2>تماس با من</h2>
+            <p>می‌تونید از طریق ایمیل یا شبکه‌های اجتماعی زیر با من در ارتباط باشید.</p>
+            <p><strong>ایمیل:</strong> your.email@example.com</p>
+            <div class="social-links">
+                <a href="#">لینکدین</a>
+                <a href="#">گیت‌هاب</a>
+                <a href="#">توییتر</a>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 - تمام حقوق برای علی احمدی محفوظ است.</p>
+    </footer>
+</body>
+</html>
