--- a/index.html
+++ b/index.html
@@ -1,52 +1,52 @@
 <!DOCTYPE html>
-<html lang="fa" dir="rtl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>علی احمدی - نمونه کار</title>
+    <title>Your Name - Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>علی احمدی</h1>
-        <p>توسعه‌دهنده وب و طراح گرافیک</p>
+        <h1>Your Name</h1>
+        <p>Embedded Systems Engineer - IoT - IoMT</p>
     </header>
 
     <nav>
-        <a href="#about">درباره من</a>
-        <a href="#portfolio">نمونه کارها</a>
-        <a href="#contact">تماس با من</a>
+        <a href="#about">About</a>
+        <a href="#portfolio">Portfolio</a>
+        <a href="#contact">Contact</a>
     </nav>
 
     <main>
         <section id="about">
-            <h2>درباره من</h2>
-            <img src="https://via.placeholder.com/150" alt="عکس پروفایل علی احمدی" class="profile-pic">
+            <h2>About Me</h2>
+            <img src="https://via.placeholder.com/150" alt="Profile Picture" class="profile-pic">
             <p>
-                سلام! من علی احمدی هستم. من به دنیای تکنولوژی و طراحی علاقه زیادی دارم و چند سالی هست که در زمینه توسعه وب فعالیت می‌کنم. هدف من ایجاد تجربه‌های کاربری زیبا و کارآمد برای کاربران است. برای اطلاعات بیشتر می‌توانید رزومه من را دانلود کنید.
+                Hello! I'm [Your Name], an Embedded Systems Engineer specializing in IoT and IoMT. I am passionate about building smart devices and systems that connect the physical and digital worlds. My goal is to create efficient, reliable, and innovative solutions. Feel free to download my resume for more details.
             </p>
-            <a href="#" class="button">دانلود رزومه</a>
+            <a href="#" class="button">Download Resume</a>
         </section>
 
         <hr>
 
         <section id="portfolio">
-            <h2>نمونه کارها</h2>
+            <h2>Portfolio</h2>
             <div class="portfolio-grid">
                 <div class="portfolio-item">
-                    <img src="https://via.placeholder.com/300x200" alt="نمونه کار اول">
-                    <h3>پروژه اول</h3>
-                    <p>توضیح کوتاهی درباره این پروژه و تکنولوژی‌های استفاده شده.</p>
+                    <img src="https://via.placeholder.com/300x200" alt="Project One">
+                    <h3>Project One</h3>
+                    <p>A brief description of this project and the technologies used.</p>
                 </div>
                 <div class="portfolio-item">
-                    <img src="https://via.placeholder.com/300x200" alt="نمونه کار دوم">
-                    <h3>پروژه دوم</h3>
-                    <p>توضیح کوتاهی درباره این پروژه و تکنولوژی‌های استفاده شده.</p>
+                    <img src="https://via.placeholder.com/300x200" alt="Project Two">
+                    <h3>Project Two</h3>
+                    <p>A brief description of this project and the technologies used.</p>
                 </div>
                 <div class="portfolio-item">
-                    <img src="https://via.placeholder.com/300x200" alt="نمونه کار سوم">
-                    <h3>پروژه سوم</h3>
-                    <p>توضیح کوتاهی درباره این پروژه و تکنولوژی‌های استفاده شده.</p>
+                    <img src="https://via.placeholder.com/300x200" alt="Project Three">
+                    <h3>Project Three</h3>
+                    <p>A brief description of this project and the technologies used.</p>
                 </div>
             </div>
         </section>
@@ -54,19 +54,19 @@
         <hr>
 
         <section id="contact">
-            <h2>تماس با من</h2>
-            <p>می‌تونید از طریق ایمیل یا شبکه‌های اجتماعی زیر با من در ارتباط باشید.</p>
-            <p><strong>ایمیل:</strong> your.email@example.com</p>
+            <h2>Contact Me</h2>
+            <p>You can reach me via email or connect with me on social media.</p>
+            <p><strong>Email:</strong> your.email@example.com</p>
             <div class="social-links">
-                <a href="#">لینکدین</a>
-                <a href="#">گیت‌هاب</a>
-                <a href="#">توییتر</a>
+                <a href="#">LinkedIn</a>
+                <a href="#">GitHub</a>
+                <a href="#">Twitter</a>
             </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 - تمام حقوق برای علی احمدی محفوظ است.</p>
+        <p>&copy; 2025 - All rights reserved by [Your Name].</p>
     </footer>
 </body>
 </html>
